add sticky panels

--- a/css/style.css
+++ b/css/style.css
@@ -1792,6 +1792,12 @@ html {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  position: sticky;
+  top: 130px;
+  left: 0;
+  right: 0;
+  background-color: #FFF;
+  z-index: 1000;
 }
 .breadcrumbs a::after {
   content: "|";
@@ -1804,6 +1810,7 @@ html {
 @media screen and (max-width: 920px) {
   .breadcrumbs {
     height: 70px;
+    top: 85px;
   }
 }
 @media screen and (max-width: 767px) {
@@ -3857,6 +3864,25 @@ html {
 @media screen and (max-width: 767px) {
   .panel_height {
     height: 50px;
+  }
+}
+
+.fixed_panel {
+  position: sticky;
+  top: 215px;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  background-color: #FFF;
+}
+@media screen and (max-width: 920px) {
+  .fixed_panel {
+    top: 155px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .fixed_panel {
+    top: 135px;
   }
 }
 
