--- a/templates/partials/catalog_inner_sections_panel.html
+++ b/templates/partials/catalog_inner_sections_panel.html
@@ -1,4 +1,4 @@
-<div class="container panel_height ">
+<div class="container panel_height fixed_panel">
     <div class="catalog_inner_sections">
         <a href="catalog_opened_filters+checkbox+active.html" class="main_text_title">одежда</a>
         <a href="#" class="main_text_title">обувь</a>
