--- a/templates/partials/catalog_opened_filters_panel+active.html
+++ b/templates/partials/catalog_opened_filters_panel+active.html
@@ -1,4 +1,4 @@
-<div class="container panel_height">
+<div class="container panel_height fixed_panel">
     <div class="hide_filtres">
         <div class="hide_filters">
             <div class="main_text_title">
