--- a/templates/partials/button_up.html
+++ b/templates/partials/button_up.html
@@ -1,7 +1,7 @@
 <!-- Кнопка НАВЕРХ начало -->
 
-<a href="#" class="btn_up">
+<div class="btn_up">
     <img src="./img/icons/btn_up.png" alt="up">
-</a>
+</div>
 
 <!-- Кнопка НАВЕРХ конец -->
