--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,6 +1,6 @@
 <!-- Футер Екатеринбург начало -->
 
-<div class="footer">
+<div class="footer footer_ekat">
     <div class="container footer__row">
 
         <a href="index.html" class="footer__col logo_light">
@@ -88,7 +88,7 @@
 
 <!-- Футер другие регионы начало -->
 
-<!-- <div class="footer">
+<div class="footer footer_region">
     <div class="container footer__row">
 
         <a href="index.html" class="footer__col logo_light">
@@ -170,7 +170,7 @@
             <a href="privacy_policy.html" class="footer_main_text_contrast">Политика конфиденциальности</a>
         </div>
     </div>
-</div> -->
+</div>
 
 <!-- Футер другие регионы конец -->
 
