--- a/templates/partials/sorting.html
+++ b/templates/partials/sorting.html
@@ -1,7 +1,7 @@
 <div class="sorting">
     <div class="sort_title">
         <div class="main_text uppercase sorting_property">сортировка</div>
-        <div class="selected_sort"></div>
+        <div class="selected_sort main_text"></div>
         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none" class="sorting_icon">
             <path d="M4.16602 6.25H20.8327M10.416 12.5H20.8327M16.666 18.75H20.8327" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
