--- a/css/style.css
+++ b/css/style.css
@@ -701,7 +701,7 @@ html {
   align-items: center;
   position: sticky;
   top: 0;
-  z-index: 1001;
+  z-index: 1500;
 }
 @media screen and (max-width: 920px) {
   #header_dark {
@@ -767,7 +767,7 @@ html {
   position: sticky;
   top: 45px;
   background-color: #FFF;
-  z-index: 1001;
+  z-index: 1500;
 }
 @media screen and (max-width: 920px) {
   .header_light {
@@ -862,7 +862,7 @@ html {
   position: sticky;
   top: 0;
   background-color: #FFF;
-  z-index: 1001;
+  z-index: 1500;
 }
 @media screen and (max-width: 920px) {
   .header_mobile {
@@ -1435,10 +1435,12 @@ html {
 }
 
 .btn_up {
+  display: none;
   position: fixed;
   right: 30px;
   bottom: 20px;
   z-index: 999;
+  cursor: pointer;
 }
 @media screen and (max-width: 920px) {
   .btn_up {
@@ -1792,12 +1794,6 @@ html {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  position: sticky;
-  top: 130px;
-  left: 0;
-  right: 0;
-  background-color: #FFF;
-  z-index: 1000;
 }
 .breadcrumbs a::after {
   content: "|";
@@ -1850,7 +1846,7 @@ html {
   padding-bottom: 85px;
   position: fixed;
   top: -475px;
-  z-index: 1000;
+  z-index: 1001;
 }
 @media screen and (max-width: 920px) {
   .dropdown_menu {
@@ -1890,55 +1886,67 @@ html {
 }
 
 .dropdown--active {
-  animation: dropdown_slide_show 1s forwards;
+  animation: dropdown_slide_show 0.5s forwards;
 }
 
 .dropdown--inactive {
-  animation: dropdown_slide_show_reverse 1s forwards;
+  animation: dropdown_slide_show_reverse 0.5s forwards;
 }
 
 .dark_window {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
-  min-height: 100vh;
+  height: 100vh;
   background-color: rgba(138, 138, 138, 0.7);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 9980;
+  padding: 30px 10px;
 }
 
 .dark_window_add_to_basket {
   display: none;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
   min-height: 100vh;
   background-color: rgba(138, 138, 138, 0.7);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 9980;
+  padding: 30px 10px;
 }
 
 .dark_window_location {
   display: none;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
   min-height: 100vh;
   background-color: rgba(138, 138, 138, 0.7);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 9980;
+  padding: 30px 10px;
 }
 
 .dark_window_subscribe {
   display: none;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
   min-height: 100vh;
   background-color: rgba(138, 138, 138, 0.7);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 9980;
+  padding: 30px 10px;
 }
 
 .pop-up_title {
@@ -1947,20 +1955,20 @@ html {
 
 .close_icon {
   position: absolute;
-  top: -20px;
-  right: -20px;
+  top: 5px;
+  right: 5px;
   cursor: pointer;
+  z-index: 10000;
 }
 
 .pop-up_form_500 {
-  width: 500px;
-  height: 230px;
+  width: 100%;
+  max-width: 500px;
   background-color: #FFF;
-  margin: 0 auto;
-  margin-top: 157px;
   position: relative;
   padding: 60px 35px;
   padding-bottom: 85px;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1968,7 +1976,7 @@ html {
 }
 @media screen and (max-width: 767px) {
   .pop-up_form_500 {
-    width: calc(100% - 60px);
+    width: calc(100% - 20px);
   }
 }
 .pop-up_form_500 .btn_main {
@@ -1984,10 +1992,6 @@ html {
   .pop-up_form_500 .choose_city {
     width: 100%;
   }
-}
-
-.pop_up_subscribe {
-  height: 308px;
 }
 
 .add_to_basket {
@@ -2248,10 +2252,10 @@ html {
 .sorting .sort_title {
   display: flex;
   align-items: center;
+  gap: 10px;
 }
 .sorting .sort_title .sorting_property {
   cursor: pointer;
-  padding-right: 10px;
 }
 .sorting .sort_title .selected_sort {
   cursor: pointer;
@@ -2259,6 +2263,14 @@ html {
 .sorting .sort_title .sorting_icon {
   display: flex;
   cursor: pointer;
+}
+@media screen and (max-width: 767px) {
+  .sorting .sort_title {
+    height: 50px;
+  }
+  .sorting .sort_title .main_text {
+    font-size: 12px;
+  }
 }
 @media screen and (max-width: 920px) {
   .sorting .sorting_property {
@@ -2824,10 +2836,11 @@ html {
 }
 
 .pop-up_form_794 {
-  width: 794px;
+  width: 100%;
+  max-width: 794px;
   background-color: #FFF;
-  margin: 0 auto;
-  margin-top: 130px;
+  width: 100%;
+  overflow: auto;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -2836,14 +2849,15 @@ html {
 }
 @media screen and (max-width: 767px) {
   .pop-up_form_794 {
-    width: calc(100% - 60px);
+    width: calc(100% - 20px);
   }
 }
 
 .pop_up_discount {
-  height: 360px;
   padding: 60px 20px 85px 20px;
   text-align: center;
+  justify-content: flex-start;
+  row-gap: 10px;
 }
 
 .log_in_stroke {
@@ -3540,7 +3554,7 @@ html {
   flex-grow: 1;
   margin: 0 auto;
   padding-top: 60px;
-  padding-bottom: 85px;
+  padding-bottom: 60px;
 }
 @media screen and (max-width: 767px) {
   .pop_up_col {
@@ -3591,17 +3605,24 @@ html {
 }
 
 .pop_up_block_tabs {
-  width: 794px;
+  max-width: 794px;
+  max-height: calc(100vh - 60px);
+  width: 100%;
+  height: 100%;
   background-color: #FFF;
-  margin: 0 auto;
-  margin-top: 45px;
   position: relative;
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
 @media screen and (max-width: 920px) {
   .pop_up_block_tabs {
     width: calc(100% - 80px);
+  }
+}
+@media screen and (max-width: 767px) {
+  .pop_up_block_tabs {
+    width: calc(100% - 20px);
   }
 }
 
@@ -3867,25 +3888,6 @@ html {
   }
 }
 
-.fixed_panel {
-  position: sticky;
-  top: 215px;
-  left: 0;
-  right: 0;
-  z-index: 1000;
-  background-color: #FFF;
-}
-@media screen and (max-width: 920px) {
-  .fixed_panel {
-    top: 155px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .fixed_panel {
-    top: 135px;
-  }
-}
-
 @media screen and (max-width: 767px) {
   .catalog_women {
     display: none;
@@ -3906,4 +3908,45 @@ html {
   width: 100%;
   aspect-ratio: 430/320;
   object-fit: cover;
+}
+
+.full_width_breadcrumbs {
+  position: sticky;
+  top: 130px;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  background-color: #FFF;
+}
+@media screen and (max-width: 920px) {
+  .full_width_breadcrumbs {
+    top: 85px;
+  }
+}
+
+.full_width {
+  position: sticky;
+  top: 215px;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  background-color: #FFF;
+}
+@media screen and (max-width: 920px) {
+  .full_width {
+    top: 155px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .full_width {
+    top: 135px;
+  }
+}
+
+.choose_city_btn {
+  cursor: pointer;
+}
+
+.inactive {
+  display: none;
 }
