--- a/templates/pages/delivery.html
+++ b/templates/pages/delivery.html
@@ -19,7 +19,7 @@
 
 <!-- Доставка Екатеринбург начало -->
 
-<div class="container text_content_container info_pages_text min_height">
+<div class="container text_content_container info_pages_text min_height delivery_ekb">
     <p>В г. Екатеринбург вы можете получить ваш заказ 2 способами:</p>
     <ul>
         <li>оформить бесплатно самовывоз из нашего магазина по адресу:  ул. 8 Марта д. 46, ТЦ Гринвич, 2 очередь, 2 этаж, бутик  212  </li>
@@ -36,12 +36,12 @@
 
 <!-- Доставка другие регионы начало -->
 
-<!-- <div class="container text_content_container info_pages_text">
+<div class="container text_content_container info_pages_text delivery_region">
     <p>Мы осуществляем доставку заказов по всей России транспортной компанией СДЭК до пункта самовывоза или вашего адреса на выбор.</p>
     <p>Стоимость доставки будет рассчитана в момент оформления заказа.</p>
     <p>Мы бережно упакуем ваш заказ перед сдачей в транспортную компанию.</p>
     <p>Вы сможете отследить движение заказа по трек-номеру, который будет доступен в вашем личном кабинете на нашем сайте. </p>
-</div> -->
+</div>
 
 <!-- Доставка другие регионы конец -->
 
