--- a/templates/partials/breadcrumbs.html
+++ b/templates/partials/breadcrumbs.html
@@ -1,10 +1,11 @@
-  
-     
+  <div class="full_width_breadcrumbs">
     <div class="container breadcrumbs">
         {% for link in breadcrumbs %}
             <a href="{{ link.link }}" class="main_text">{{ link.text }}</a>
         {% endfor %}
     </div>
+</div>
+
 
 
 
