--- a/templates/partials/catalog_inner_sections_panel.html
+++ b/templates/partials/catalog_inner_sections_panel.html
@@ -1,10 +1,12 @@
-<div class="container panel_height fixed_panel">
-    <div class="catalog_inner_sections">
-        <a href="catalog_opened_filters+checkbox+active.html" class="main_text_title">одежда</a>
-        <a href="#" class="main_text_title">обувь</a>
-        <a href="#" class="main_text_title">сумки</a>
-        <a href="#" class="main_text_title">аксессуары</a>
+<div class="full_width">
+    <div class="container panel_height">
+        <div class="catalog_inner_sections">
+            <a href="catalog_opened_filters+checkbox+active.html" class="main_text_title">одежда</a>
+            <a href="#" class="main_text_title">обувь</a>
+            <a href="#" class="main_text_title">сумки</a>
+            <a href="#" class="main_text_title">аксессуары</a>
+        </div>
+    
+        {% include "partials/sorting.html" %}
     </div>
-
-    {% include "partials/sorting.html" %}
 </div>
