--- a/templates/partials/catalog_women-men_panel.html
+++ b/templates/partials/catalog_women-men_panel.html
@@ -1,17 +1,18 @@
-<div class="container panel_height">
-    <div class="catalog_inner_sections women-men_panel">
-        <a href="#" class="main_text_title">женщины</a>
-        <a href="#" class="main_text_title">мужчины</a>
+<div class="full_width">
+    <div class="container panel_height">
+        <div class="catalog_inner_sections women-men_panel">
+            <a href="#" class="main_text_title">женщины</a>
+            <a href="#" class="main_text_title">мужчины</a>
+        </div>
+    
+        <a href="choice_women_men_mobile.html">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none" class="filter_icon">
+                <path d="M5.20898 12.4993V4.16602M19.7923 20.8327V17.7077M5.20898 20.8327V16.666M19.7923 13.541V4.16602M12.5007 7.29102V4.16602M12.5007 20.8327V11.4577" stroke="#393939" stroke-width="0.833333" stroke-linecap="round"/>
+                <path d="M5.20833 16.6667C6.35893 16.6667 7.29167 15.7339 7.29167 14.5833C7.29167 13.4327 6.35893 12.5 5.20833 12.5C4.05774 12.5 3.125 13.4327 3.125 14.5833C3.125 15.7339 4.05774 16.6667 5.20833 16.6667Z" stroke="#393939" stroke-width="0.833333" stroke-linecap="round"/>
+                <path d="M12.4993 11.4577C13.6499 11.4577 14.5827 10.5249 14.5827 9.37435C14.5827 8.22376 13.6499 7.29102 12.4993 7.29102C11.3488 7.29102 10.416 8.22376 10.416 9.37435C10.416 10.5249 11.3488 11.4577 12.4993 11.4577Z" stroke="#393939" stroke-width="0.833333" stroke-linecap="round"/>
+                <path d="M19.7923 17.7077C20.9429 17.7077 21.8757 16.7749 21.8757 15.6243C21.8757 14.4738 20.9429 13.541 19.7923 13.541C18.6417 13.541 17.709 14.4738 17.709 15.6243C17.709 16.7749 18.6417 17.7077 19.7923 17.7077Z" stroke="#393939" stroke-width="0.833333" stroke-linecap="round"/>
+            </svg>
+        </a>
+    
     </div>
-
-    <a href="choice_women_men_mobile.html">
-        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none" class="filter_icon">
-            <path d="M5.20898 12.4993V4.16602M19.7923 20.8327V17.7077M5.20898 20.8327V16.666M19.7923 13.541V4.16602M12.5007 7.29102V4.16602M12.5007 20.8327V11.4577" stroke="#393939" stroke-width="0.833333" stroke-linecap="round"/>
-            <path d="M5.20833 16.6667C6.35893 16.6667 7.29167 15.7339 7.29167 14.5833C7.29167 13.4327 6.35893 12.5 5.20833 12.5C4.05774 12.5 3.125 13.4327 3.125 14.5833C3.125 15.7339 4.05774 16.6667 5.20833 16.6667Z" stroke="#393939" stroke-width="0.833333" stroke-linecap="round"/>
-            <path d="M12.4993 11.4577C13.6499 11.4577 14.5827 10.5249 14.5827 9.37435C14.5827 8.22376 13.6499 7.29102 12.4993 7.29102C11.3488 7.29102 10.416 8.22376 10.416 9.37435C10.416 10.5249 11.3488 11.4577 12.4993 11.4577Z" stroke="#393939" stroke-width="0.833333" stroke-linecap="round"/>
-            <path d="M19.7923 17.7077C20.9429 17.7077 21.8757 16.7749 21.8757 15.6243C21.8757 14.4738 20.9429 13.541 19.7923 13.541C18.6417 13.541 17.709 14.4738 17.709 15.6243C17.709 16.7749 18.6417 17.7077 19.7923 17.7077Z" stroke="#393939" stroke-width="0.833333" stroke-linecap="round"/>
-        </svg>
-    </a>
-
-    {% include "partials/sorting.html" %}
 </div>
