--- a/templates/pages/product_page.html
+++ b/templates/pages/product_page.html
@@ -84,7 +84,7 @@
                     <div class="option_choosed">
                         <p class="main_text uppercase">цвет</p>
                         <div class="color_choosed_img"></div>
-                        <div class="color_choosed_name"></div>
+                        <div class="color_choosed_name small_text"></div>
                     </div>
 
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="option_product_opened_arrow color_opened_arrow">
@@ -111,7 +111,7 @@
                 <div class="info_row">
                     <div class="option_choosed">
                         <p class="main_text uppercase">размер</p>
-                        <div class="size_choosed"></div>
+                        <div class="size_choosed main_text_addit_dark uppercase size_choice"></div>
                     </div>
 
 
@@ -349,6 +349,15 @@
                 </svg>
             </p>
         </div>
+
+        <a href="product_page+window_add_to_basket.html" class="btn_in_basket">
+            <p class="main_text uppercase btn_text green">
+                товар в корзине 
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17" viewBox="0 0 16 17" fill="none">
+                    <path d="M11.6667 5.21684V3.67014C11.6667 3.18817 11.5661 2.71092 11.3706 2.26564C11.1752 1.82036 10.8888 1.41576 10.5276 1.07496C10.1665 0.734155 9.73781 0.463814 9.26599 0.279373C8.79417 0.0949308 8.28847 0 7.77778 0C7.26708 0 6.76139 0.0949308 6.28956 0.279373C5.81774 0.463814 5.38903 0.734155 5.02792 1.07496C4.6668 1.41576 4.38035 1.82036 4.18491 2.26564C3.98948 2.71092 3.88889 3.18817 3.88889 3.67014V7.34028C3.88889 7.47933 3.94742 7.61269 4.05161 7.71102C4.15579 7.80934 4.2971 7.86458 4.44444 7.86458C4.59179 7.86458 4.73309 7.80934 4.83728 7.71102C4.94147 7.61269 5 7.47933 5 7.34028V6.26545H9.44444V5.21684H5V3.67014C5 2.97487 5.29266 2.30807 5.81359 1.81644C6.33453 1.32481 7.04106 1.04861 7.77778 1.04861C8.51449 1.04861 9.22103 1.32481 9.74196 1.81644C10.2629 2.30807 10.5556 2.97487 10.5556 3.67014V7.31406C10.5556 7.45312 10.6141 7.58648 10.7183 7.6848C10.8225 7.78313 10.9638 7.83837 11.1111 7.83837C11.2585 7.83837 11.3998 7.78313 11.5039 7.6848C11.6081 7.58648 11.6667 7.45312 11.6667 7.31406V6.26545H14.4444V15.703H1.11111V6.26545H2.77778V5.21684H0V15.7501C0 16.0157 0.111795 16.2704 0.310792 16.4583C0.509789 16.6461 0.779687 16.7516 1.06111 16.7516H14.4944C14.7759 16.7516 15.0458 16.6461 15.2448 16.4583C15.4438 16.2704 15.5556 16.0157 15.5556 15.7501V5.21684H11.6667Z" fill="#03CEA4" />
+                </svg>
+            </p>
+        </a>
 
     </div>
 </div>
