--- a/templates/pages/catalog_women.html
+++ b/templates/pages/catalog_women.html
@@ -45,10 +45,10 @@
 
 <div class="catalog_women_mobile">
 
-    <a href="catalog_closed_filters.html">
+    <a href="catalog_opened_filters+checkbox+active.html">
         <img src="./img/catalog_main/catalog_women/clothes.png" class="catalog_mobile_foto" alt="">
     </a>
-    <a href="catalog_closed_filters.html" class="category_part__item">
+    <a href="catalog_opened_filters+checkbox+active.html" class="category_part__item">
         <p class="small_text uppercase">Одежда</p>
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
             <path d="M8.33203 14.1673L12.4987 10.0007L8.33203 5.83398" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
