--- a/templates/partials/catalog_women-men_panel.html
+++ b/templates/partials/catalog_women-men_panel.html
@@ -4,15 +4,33 @@
             <a href="#" class="main_text_title">женщины</a>
             <a href="#" class="main_text_title">мужчины</a>
         </div>
-    
-        <a href="choice_women_men_mobile.html">
-            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none" class="filter_icon">
-                <path d="M5.20898 12.4993V4.16602M19.7923 20.8327V17.7077M5.20898 20.8327V16.666M19.7923 13.541V4.16602M12.5007 7.29102V4.16602M12.5007 20.8327V11.4577" stroke="#393939" stroke-width="0.833333" stroke-linecap="round"/>
-                <path d="M5.20833 16.6667C6.35893 16.6667 7.29167 15.7339 7.29167 14.5833C7.29167 13.4327 6.35893 12.5 5.20833 12.5C4.05774 12.5 3.125 13.4327 3.125 14.5833C3.125 15.7339 4.05774 16.6667 5.20833 16.6667Z" stroke="#393939" stroke-width="0.833333" stroke-linecap="round"/>
-                <path d="M12.4993 11.4577C13.6499 11.4577 14.5827 10.5249 14.5827 9.37435C14.5827 8.22376 13.6499 7.29102 12.4993 7.29102C11.3488 7.29102 10.416 8.22376 10.416 9.37435C10.416 10.5249 11.3488 11.4577 12.4993 11.4577Z" stroke="#393939" stroke-width="0.833333" stroke-linecap="round"/>
-                <path d="M19.7923 17.7077C20.9429 17.7077 21.8757 16.7749 21.8757 15.6243C21.8757 14.4738 20.9429 13.541 19.7923 13.541C18.6417 13.541 17.709 14.4738 17.709 15.6243C17.709 16.7749 18.6417 17.7077 19.7923 17.7077Z" stroke="#393939" stroke-width="0.833333" stroke-linecap="round"/>
-            </svg>
-        </a>
-    
     </div>
+
 </div>
+
+<!-- Блок выбора Жунщины / Мужчины начало УБРАЛА ЕГО ВООБЩЕ -->
+
+<!-- <div class="container catalog">
+
+    <a href="catalog_closed_filters.html">
+        <img src="./img/catalog_main/search_w-m/women.jpg" class="catalog_mobile_foto" alt="">
+    </a>
+    <a href="catalog_closed_filters.html" class="category_part__item">
+        <p class="small_text uppercase">Женщины</p>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+            <path d="M8.33203 14.1673L12.4987 10.0007L8.33203 5.83398" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+    </a>
+    <a href="#">
+        <img src="./img/catalog_main/search_w-m/men.jpg" class="catalog_mobile_foto" alt="">
+    </a>
+    <a href="#" class="category_part__item">
+        <p class="small_text uppercase">Мужчины</p>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+            <path d="M8.33203 14.1673L12.4987 10.0007L8.33203 5.83398" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+    </a>
+
+</div> -->
+
+<!-- Блок выбора Жунщины / Мужчины конец -->
