--- a/templates/pages/delivery.html
+++ b/templates/pages/delivery.html
@@ -36,7 +36,7 @@
 
 <!-- Доставка другие регионы начало -->
 
-<div class="container text_content_container info_pages_text delivery_region">
+<div class="container text_content_container info_pages_text min_height delivery_region">
     <p>Мы осуществляем доставку заказов по всей России транспортной компанией СДЭК до пункта самовывоза или вашего адреса на выбор.</p>
     <p>Стоимость доставки будет рассчитана в момент оформления заказа.</p>
     <p>Мы бережно упакуем ваш заказ перед сдачей в транспортную компанию.</p>
