--- a/scss/assets/_main.scss
+++ b/scss/assets/_main.scss
@@ -316,7 +316,7 @@ html {
     z-index: 999;
     width: 100%;
     min-height: calc(100vh - 85px);
-    height: 100%;
+    height: calc(100vh - 85px);
     transition: 0.5s;
     background-color: $main_color_light;
     overflow-y: auto;
