--- a/scss/assets/_main.scss
+++ b/scss/assets/_main.scss
@@ -310,13 +310,14 @@ html {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: absolute;
+    position: fixed;
     top: 85px;
     left: -100%;
     z-index: 999;
     width: 100%;
-    min-height: calc(100vh - 85px);
-    // height: calc(100vh - 85px);
+    // min-height: calc(100vh - 85px);
+    height: calc(100vh - 85px);
+    height: calc(var(--vh, 1vh) * 100 - 85px);
     transition: 0.5s;
     background-color: $main_color_light;
     overflow-y: auto;
