--- a/templates/pages/basket_full.html
+++ b/templates/pages/basket_full.html
@@ -21,10 +21,10 @@
 
 <!-- Корзина с товарами начало -->
 
-<div class="container order_list">
+<div class="container order_list order_list_basket">
 
     <!-- Строчка товара в корзине начало -->
-    <div class="order_list__item">
+    <!-- <div class="order_list__item">
         <div class="order_item_foto">
             <img src="./img/product_cards/women/clothes/product3.jpeg" alt="foto" class="item_foto">
         </div>
@@ -61,11 +61,11 @@
                 </svg>
             </a>
         </div>
-    </div>
+    </div> -->
     <!-- Строчка товара в корзине конец -->
 
     <!-- Строчка товара в корзине начало -->
-    <div class="order_list__item">
+    <!-- <div class="order_list__item">
         <div class="order_item_foto">
             <img src="./img/product_cards/women/clothes/product5.jpeg" alt="foto" class="item_foto">
         </div>
@@ -102,11 +102,11 @@
                 </svg>
             </a>
         </div>
-    </div>
+    </div> -->
     <!-- Строчка товара в корзине конец -->
 
     <!-- Строчка товара в корзине начало -->
-    <div class="order_list__item">
+    <!-- <div class="order_list__item">
         <div class="order_item_foto">
             <img src="./img/product_cards/women/clothes/product8.jpeg" alt="foto" class="item_foto">
         </div>
@@ -143,12 +143,12 @@
                 </svg>
             </a>
         </div>
-    </div>
+    </div> -->
     <!-- Строчка товара в корзине конец -->
 
 </div>
 
-<div class="container total_cost">
+<div class="container total_cost total_cost_basket">
 
     <div class="total_cost__item margin_top-15">
         <div class="total_item_name main_text">
@@ -179,7 +179,7 @@
 
 </div>
 
-<div class="container order_btn">
+<div class="container order_btn order_btn_basket">
     <a href="catalog_main.html" class="btn_main turn_catalog">
         <p class="main_text uppercase btn_text">вернуться в каталог</p>
     </a>
@@ -190,6 +190,22 @@
 
 
 <!-- Корзина с товарами конец -->
+
+
+<!-- Корзина пустая начало -->
+
+<div class="empty_content empty_basket inactive">
+
+    <p class="main_text uppercase">в корзине пока ничего нет</p>
+
+    <a href="catalog_main.html" class="btn_main">
+        <p class="main_text uppercase btn_text">перейти в каталог</p>
+    </a>
+
+</div>
+
+<!-- Корзина пустая конец -->
+
 
 
 {% endblock %}
