--- a/templates/pages/product_page.html
+++ b/templates/pages/product_page.html
@@ -29,7 +29,7 @@
 
 <div class="container product_page">
     <div class="roduct_page__foto">
-        <img src="./img/product_cards/women/clothes/product3.jpeg" class="product_foto" alt="#">
+        <img src="./img/product_cards/women/clothes/product3.jpeg" class="product_foto main_foto" alt="#">
         <img src="./img/product_cards/women/clothes/product3/product3-1.jpeg" class="product_foto" alt="#">
         <img src="./img/product_cards/women/clothes/product3/product3-2.jpeg" class="product_foto" alt="#">
         <img src="./img/product_cards/women/clothes/product3/product3-3.jpeg" class="product_foto" alt="#">
@@ -54,10 +54,10 @@
     <div class="roduct_page__info">
 
         <div class="main_info">
-            <p class="main_text_addit_dark article_number">Арт. 1234567</p>
+            <p class="main_text_addit_dark article_number">Арт. <span class="art">1234567</span></p>
 
             <div class="info_row">
-                <p class="main_text_title">Кардиган из шерсти</p>
+                <p class="main_text_title name">Кардиган из шерсти</p>
                 <div class="row_icons">
                     <a href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
@@ -75,7 +75,7 @@
             <div class="info_row">
                 <div class="price">
                     <div class="old_price_text">10 000 р.</div>
-                    <div class="main_text">8 000 р.</div>
+                    <div class="main_text"><span class="price_in_basket">8 000</span> р.</div>
                 </div>
             </div>
 
