--- a/scss/assets/_main.scss
+++ b/scss/assets/_main.scss
@@ -1523,10 +1523,14 @@ html {
 }
 
 .min_height {
-    min-height: calc(100vh - 565px);
+    min-height: calc(100vh - 656px);
     
     @media screen and (max-width: 920px) {
-        min-height: calc(100vh - 369px);
+        min-height: calc(100vh - 348px);
+    }
+
+    @media screen and (max-width: 767px) {
+        min-height: calc(100vh - 408px);
     }
 }
 
@@ -2578,7 +2582,7 @@ html {
             cursor: pointer;
 
             @media screen and (max-width: 920px) {
-                .uppercase {
+                span {
                     display: none;
                 }
             }
