--- a/templates/pages/contacts.html
+++ b/templates/pages/contacts.html
@@ -20,7 +20,7 @@
 <!-- Контакты Екатеринбург начало -->
 
 
-<div class="container conacts contacts_ekb">
+<div class="container conacts contacts_ekb min_height">
     <div class="map">
         <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A64153c43f1c7ed8279950871c9007ed7be9b82ae8b9bed4bf047573bba470c37&amp;width=100%25&amp;height=470&amp;lang=ru_RU&amp;scroll=true"></script>
     </div>
@@ -86,7 +86,7 @@
 
 <!-- Контакты другие регионы начало -->
 
-<div class="container text_content_container contacts_region">
+<div class="container text_content_container contacts_region min_height">
     <div class="contacts_info contacts_info-region info_pages_text">
         <div class="contacts_info__blok">
             <p>Мы осуществляем доставку заказов по всей России.</p>
