--- a/templates/pages/personal_account_info.html
+++ b/templates/pages/personal_account_info.html
@@ -51,7 +51,7 @@
                 </form>
             </div>
             <div class="discount_cell">
-                <p class="main_text uppercase">персональная скидка <span class="red">5%</span></p>
+                <p class="main_text uppercase">персональная скидка <span class="red total_discount">5</span><span class="red">%</span></p>
                 <a href="personal_account_info_discount.html" class="small_text underline">подробнее о системе лояльности</a>
             </div>
         </div>
