--- a/templates/pages/personal_account_orders.html
+++ b/templates/pages/personal_account_orders.html
@@ -115,7 +115,7 @@
                 Общая сумма покупок
             </div>
             <div class="value_amount main_text_contrast">
-                119 400 р.
+                <span class="total_orders_sum">119400</span> &nbsp;р.
             </div>
         </div>
 
