--- a/templates/pages/product_page.html
+++ b/templates/pages/product_page.html
@@ -74,8 +74,8 @@
 
             <div class="info_row">
                 <div class="price">
-                    <div class="old_price_text">10 000 р.</div>
-                    <div class="main_text"><span class="price_in_basket">8 000</span> р.</div>
+                    <div class="old_price_text">10000 р.</div>
+                    <div class="main_text"><span class="price_in_basket">8000</span> р.</div>
                 </div>
             </div>
 
