--- a/css/style.css
+++ b/css/style.css
@@ -1911,6 +1911,22 @@ html {
   left: 0;
   z-index: 9980;
   padding: 30px 10px;
+  animation: dropdown_show 0.3s;
+}
+
+.dark_window_check_phone {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(138, 138, 138, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9980;
+  padding: 30px 10px;
+  animation: dropdown_show 0.3s;
 }
 
 .dark_window_add_to_basket {
@@ -1925,6 +1941,7 @@ html {
   left: 0;
   z-index: 9980;
   padding: 30px 10px;
+  animation: dropdown_show 0.3s;
 }
 
 .dark_window_location {
@@ -1939,6 +1956,7 @@ html {
   left: 0;
   z-index: 9980;
   padding: 30px 10px;
+  animation: dropdown_show 0.3s;
 }
 
 .dark_window_subscribe {
@@ -1953,6 +1971,7 @@ html {
   left: 0;
   z-index: 9980;
   padding: 30px 10px;
+  animation: dropdown_show 0.3s;
 }
 
 .pop-up_title {
@@ -3065,10 +3084,10 @@ html {
   align-items: center;
   justify-content: flex-start;
   width: 41.6666666667%;
-  height: 85px;
+  height: 70px;
   border-bottom: 1px solid #8A8A8A;
 }
-.total_cost .total_cost__item:first-child {
+.total_cost .total_cost__item:first-child, .total_cost .total_cost__item:nth-child(2) {
   border-bottom: none;
 }
 @media screen and (max-width: 920px) {
@@ -3985,4 +4004,8 @@ html {
 
 .overflow_hidden {
   overflow: hidden;
+}
+
+.minus, .plus {
+  cursor: pointer;
 }
